@@ -92,7 +92,7 @@ public class TestConsumeEmail {
 
         runner.assertTransferCount(ConsumeIMAP.REL_SUCCESS, 2);
         final List<MockFlowFile> messages = runner.getFlowFilesForRelationship(ConsumeIMAP.REL_SUCCESS);
-        String result = new String(runner.getContentAsByteArray(messages.get(0)));
+        String result = new String(runner.getContentAsByteArray(messages.getFirst()));
 
         // Verify body
         assertTrue(result.contains("test test test chocolate"));
@@ -123,7 +123,7 @@ public class TestConsumeEmail {
 
         runner.assertTransferCount(ConsumePOP3.REL_SUCCESS, 2);
         final List<MockFlowFile> messages = runner.getFlowFilesForRelationship(ConsumePOP3.REL_SUCCESS);
-        String result = new String(runner.getContentAsByteArray(messages.get(0)));
+        String result = new String(runner.getContentAsByteArray(messages.getFirst()));
 
         // Verify body
         assertTrue(result.contains("test test test chocolate"));
